added doors for sorting houses by width

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,11 @@
       stroke-width: 2px;
 }
 
+.clickableDoor:hover {
+      stroke: #000;
+      stroke-width: 2px;
+}
+
 .house {
     cursor: pointer;
 }
