updated dataset, added window for sorting by roofWidth, now door sorts on click by only baseWidth

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,11 @@
       stroke-width: 2px;
 }
 
+.clickableWindow:hover {
+      stroke: #000;
+      stroke-width: 2px;
+}
+
 .house {
     cursor: pointer;
 }
